# deadpool

./: README.md
.devcontainer/: .env  Dockerfile  compose.yml  devcontainer.json
.github/check-features/: cargo-metadata-to-deadpool-features.jq  cargo-metadata-to-features.jq  compare-features.sh  deadpool-lapin.features  deadpool-postgres.features  deadpool-sqlite.features  get-dependency-id.jq
.github/check-redis-features/: cargo-metadata-to-deadpool-redis-features.jq  cargo-metadata-to-redis-features.jq  compare-features.sh  deadpool-redis.features  deprecated.features  get-redis-id.jq
.github/workflows/: ci.yml
diesel/: README.md
lapin/: CHANGELOG.md  Cargo.toml  README.md
postgres/: CHANGELOG.md  Cargo.toml  README.md
postgres/tests/: postgres.rs
r2d2/: README.md
redis/: CHANGELOG.md  Cargo.toml  README.md
runtime/: README.md
sqlite/: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs
